--- a/example/django_razorpay/templates/django_razorpay/transactions_list.html
+++ b/example/django_razorpay/templates/django_razorpay/transactions_list.html
@@ -7,8 +7,7 @@
 <main>
     <div class="py-5 text-center">
       <img class="d-block mx-auto mb-4" src="{{organization_logo}}" alt="" width="72" height="57">
-      <h2>Membership Fee Payment</h2>
-      <p class="lead">This payment is for member only.</p>
+      <h2>Transactions</h2>
     </div>
     <div class="row g-5 align-items-center justify-content-center">
       <div class="col-md-7 col-lg-5">
@@ -23,34 +22,26 @@
             </div>
 
           </div>
-        <h4 class="mb-3">Member details</h4>
-        <form method="POST">
-          {% csrf_token %}
-          <div class="row g-3">
-            <div class="col-12">
-              <label for="firstName" class="form-label">Name</label>
-                <select class="selectpicker form-control border border-primary" data-live-search="true" data-container="body" name="name">
-                  <option data-tokens="" disabled selected> -- Search and select your Name -- </option>
-                  {% for member in members %}
-                  <option data-tokens="{{member}}">{{member}}</option>
-                  {% endfor %}
-
-                </select>
-
-            </div>
-              <div class="col-12">
-              <label for="phonenumber" class="form-label ">Phone Number</label>
-              <input type="text" class="form-control border border-primary" id="phonenumber" name="phonenumber" placeholder="E.g. 9854785478" required>
-            </div>
-            <div class="col-12">
-              <label for="email" class="form-label">Email <span class="text-muted">(Optional)</span></label>
-              <input type="email" class="form-control border border-primary" id="email" placeholder="you@example.com" name="email" required>
-            </div>
-
-          <hr class="my-4">
-          <button class="w-100 btn btn-primary btn-lg" type="submit">Continue to checkout</button>
-          </div>
-        </form>
+        <table class="table table-striped table-hover">
+          <thead class="table-dark">
+            <tr>
+              <th scope="col">#</th>
+              <th scope="col">Name/Label</th>
+              <th scope="col">Amount</th>
+              <th scope="col">Date</th>
+            </tr>
+          </thead>
+          <tbody>
+            {% for transaction in transactions %}
+            <tr>
+              <th scope="row">{{forloop.counter}}</th>
+              <td>{{transaction.get_label}}</td>
+              <td>{{transaction.get_amount}}</td>
+              <td>{{transaction.date}}</td>
+            </tr>
+            {% endfor %}
+          </tbody>
+        </table>
       </div>
     </div>
   </main>
