--- a/example/django_razorpay/templates/django_razorpay/transactions_list.html
+++ b/example/django_razorpay/templates/django_razorpay/transactions_list.html
@@ -7,7 +7,7 @@
 <main>
     <div class="py-5 text-center">
       <img class="d-block mx-auto mb-4" src="{{organization_logo}}" alt="" width="72" height="57">
-      <h2>Transactions</h2>
+      <h2 class="text-bold">Transactions</h2>
     </div>
     <div class="row g-5 align-items-center justify-content-center">
       <div class="col-md-7 col-lg-5">
@@ -22,21 +22,50 @@
             </div>
 
           </div>
+          <form class="row gx-3 gy-2 align-items-center mb-2">
+          <div class="col">
+              <label>Month</label>
+            <select class="form-select form-label" id="monthSelect">
+                {% for month in last_few_months %}
+                {% if month.value == current_month %}
+                <option value="{{month.value}}" selected>{{month.label}}</option>
+                {% else %}
+                <option value="{{month.value}}" >{{month.label}}</option>
+                {% endif %}
+                {% endfor %}
+            </select>
+          </div><div class="col">
+              <label>Payment Type</label>
+              <select class="form-select form-label" id="paymentTypeSelect">
+                  {% for payment_type in payment_types %}
+                    {% if payment_type.value == current_payment_type %}
+                    <option value="{{payment_type.value}}" selected>{{payment_type.label}}</option>
+                    {% else %}
+                    <option value="{{payment_type.value}}" >{{payment_type.label}}</option>
+                    {% endif %}
+                {% endfor %}
+
+            </select>
+          </div>
+        </form>
         <table class="table table-striped table-hover">
+            {% if total_balance > 0 %}
+            <caption><b>Total balance: &#x20B9; {{total_balance}}</b></caption>
+            {% endif %}
           <thead class="table-dark">
             <tr>
               <th scope="col">#</th>
               <th scope="col">Name/Label</th>
-              <th scope="col">Amount</th>
+              <th scope="col">Amount (&#x20B9;)</th>
               <th scope="col">Date</th>
             </tr>
           </thead>
           <tbody>
             {% for transaction in transactions %}
             <tr>
-              <th scope="row">{{forloop.counter}}</th>
+              <td scope="row">{{forloop.counter}}</td>
               <td>{{transaction.get_label}}</td>
-              <td>{{transaction.get_amount}}</td>
+                <td>{{transaction.get_amount_html|safe}}</td>
               <td>{{transaction.date}}</td>
             </tr>
             {% endfor %}
@@ -49,29 +78,27 @@
 {% block js %}
 <script>
   $(document).ready(function(){
-  $('.selectpicker').on('changed.bs.select', function (e) {
-      var selected = e.target.value;
-      console.log(selected);
-      let data = {'name': selected, 'csrfmiddlewaretoken': '{{ csrf_token }}'}
-      let url = "{% url 'django_razorpay:get_member_details' %}";
-      console.log(data);
-      fetch(url, { method: 'POST', body: JSON.stringify(data),
-      headers: { 'Accept': 'application/json, text/plain, */*',
-        'Content-Type': 'application/json',
-       }
-      })
-        .then(Result => Result.json())
-        .then(resp_data => {
-            console.log(resp_data);
-            if(resp_data.email !== undefined){
-              document.getElementById("email").value = resp_data.email;
-            }
-            if(resp_data.phonenumber !== undefined){
-              document.getElementById("phonenumber").value = resp_data.phonenumber;
-            }
-        })
-        .catch(errorMsg => { console.log(errorMsg); });
-  });
+    function redirect(month, paymentType){
+        var url = "?month="+month+"&&payment-type="+paymentType
+        window.location = url;
+    }
+    $(function(){
+      $('#monthSelect').on('change', function () {
+          var value = $(this).val();
+          if (value) {
+              redirect(value, $('#paymentTypeSelect').val());
+              alert(url);
+          }
+          return false;
+      });
+      $('#paymentTypeSelect').on('change', function () {
+          var value = $(this).val();
+          if (value) {
+              redirect($('#monthSelect').val(), value);
+          }
+          return false;
+      });
+    });
 
   });
 </script>
