Adding features for adhoc payment

--- a/example/django_razorpay/templates/django_razorpay/membership_fee.html
+++ b/example/django_razorpay/templates/django_razorpay/membership_fee.html
@@ -8,7 +8,7 @@
     <div class="py-5 text-center">
       <img class="d-block mx-auto mb-4" src="{{organization_logo}}" alt="" width="72" height="57">
       <h2>Membership Fee Payment</h2>
-      <p class="lead">This payment is for member only.</p>
+      <p class="lead">This payment is for member only (Using Razorpay)</p>
     </div>
     <div class="row g-5 align-items-center justify-content-center">
       <div class="col-md-7 col-lg-5">
