--- a/example/django_razorpay/templates/django_razorpay/membership_fee.html
+++ b/example/django_razorpay/templates/django_razorpay/membership_fee.html
@@ -6,7 +6,6 @@
 {% block main %}
 <main>
     <div class="py-5 text-center">
-      <img class="d-block mx-auto mb-4" src="{{organization_logo}}" alt="" width="72" height="57">
       <h2>Membership Fee Payment</h2>
       <p class="lead">This payment is for member only (Using Razorpay)</p>
     </div>
@@ -40,7 +39,7 @@
             </div>
               <div class="col-12">
               <label for="phonenumber" class="form-label ">Phone Number</label>
-              <input type="text" class="form-control border border-primary" id="phonenumber" name="phonenumber" placeholder="E.g. 9854785478" required>
+              <input type="text" class="form-control border border-primary" id="phonenumber" name="phonenumber" placeholder="Example: 9854785478" required>
             </div>
             <div class="col-12">
               <label for="email" class="form-label">Email <span class="text-muted">(Optional)</span></label>
