--- a/example/django_razorpay/templates/django_razorpay/manual_transaction.html
+++ b/example/django_razorpay/templates/django_razorpay/manual_transaction.html
@@ -6,7 +6,6 @@
 {% block main %}
 <main>
     <div class="py-5 text-center">
-      <img class="d-block mx-auto mb-4" src="{{organization_logo}}" alt="" width="72" height="57">
       <h2>Manual payment transaction</h2>
       <p class="lead">Add a manual payment transaction for incoming or expense</p>
     </div>
@@ -43,11 +42,11 @@
             </div>
               <div class="col-12">
               <label for="date" class="form-label ">Amount</label>
-              <input type="text" class="form-control border border-primary" id="amount" name="amount" placeholder="E.g. 200" required>
+              <input type="text" class="form-control border border-primary" id="amount" name="amount" placeholder="Example: 200" required>
             </div>
             <div class="col-12">
               <label for="date" class="form-label ">Date</label>
-              <input type="text" class="form-control border border-primary" id="date" name="date" placeholder="E.g. 24/04/2022">
+              <input type="text" class="form-control border border-primary" id="date" name="date" placeholder="Example: 24/04/2022">
             </div>
 
           <hr class="my-4">
