--- a/example/django_razorpay/templates/django_razorpay/home.html
+++ b/example/django_razorpay/templates/django_razorpay/home.html
@@ -6,10 +6,9 @@
 {% block main %}
 <main>
     <div class="py-5 text-center">
-      <h2>Adhoc Payment</h2>
-      <p class="lead">Do a adhoc payment using razorpay</p>
-    </div>
-    <div class="row g-5 align-items-center justify-content-center">
+      <h2>Welcome to Payments home</h2>
+      <p class="lead">Click on nav links</p>
+    </div> <div class="row g-5 align-items-center justify-content-center">
       <div class="col-md-7 col-lg-5">
           <div class="row">
           <div class="col-12">
@@ -42,11 +41,4 @@
       </div>
     </div>
   </main>
-{% endblock %}
-{% block js %}
-<script>
-  $(document).ready(function(){
-
-  });
-</script>
 {% endblock %}
