--- a/django_razorpay/templates/django_razorpay/adhoc_payment.html
+++ b/django_razorpay/templates/django_razorpay/adhoc_payment.html
@@ -1,7 +1,7 @@
 {% extends "django_razorpay/base.html" %}
 {% load static %}
 {% block head %}{% endblock %}
-{% block title %}Membership Fee Payment{% endblock %}
+{% block title %}Adhoc Payment{% endblock %}
 
 {% block main %}
 <main>
