--- a/django_razorpay/templates/django_razorpay/transactions.html
+++ b/django_razorpay/templates/django_razorpay/transactions.html
@@ -1,7 +1,7 @@
 {% extends "django_razorpay/base.html" %}
 {% load static %}
 {% block head %}{% endblock %}
-{% block title %}Membership Fee Payment{% endblock %}
+{% block title %}Transactions{% endblock %}
 
 {% block main %}
 <main>
