Fixing amount and calls

--- a/django_razorpay/templates/django_razorpay/manual_transaction.html
+++ b/django_razorpay/templates/django_razorpay/manual_transaction.html
@@ -63,7 +63,7 @@
 <script src="{% static 'django_razorpay/js/bootstrap-datepicker.min.js' %}"></script>
 <script>
   $(document).ready(function(){
-
+         $('.date').datepicker({format: 'dd/mm/yyyy'});
   });
 </script>
 {% endblock %}
