redirect to transactions

--- a/django_razorpay/templates/django_razorpay/base.html
+++ b/django_razorpay/templates/django_razorpay/base.html
@@ -65,12 +65,12 @@
   {% block main %}{% endblock %}
 
   <footer class="my-5 pt-5 text-muted text-center text-small">
-    <p class="mb-1">&copy; 2017–2021 Company Name</p>
-    <ul class="list-inline">
-      <li class="list-inline-item"><a href="#">Privacy</a></li>
-      <li class="list-inline-item"><a href="#">Terms</a></li>
-      <li class="list-inline-item"><a href="#">Support</a></li>
-    </ul>
+    <p class="mb-1">&copy; 2017–2021 {% organization_name %}</p>
+<!--    <ul class="list-inline">-->
+<!--      <li class="list-inline-item"><a href="#">Privacy</a></li>-->
+<!--      <li class="list-inline-item"><a href="#">Terms</a></li>-->
+<!--      <li class="list-inline-item"><a href="#">Support</a></li>-->
+<!--    </ul>-->
   </footer>
 </div>
 
