--- a/django_razorpay/templates/django_razorpay/transactions.html
+++ b/django_razorpay/templates/django_razorpay/transactions.html
@@ -79,9 +79,9 @@
           </table>
           <div class="row">
             <div class="col-12">
-              <div class="alert alert-danger alert-dismissible fade show" role="alert">
-              <strong>No transactions found !!! </strong>
-              <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+              <div class="alert alert-danger fade show" role="alert">
+              <strong>No transactions found!!! </strong>
+
             </div>
             </div>
           </div>
